# steering-wheel

./: CMakeLists.txt  LICENSE  README.md  demo.html  steering-wheel.c  usb_descriptors.c  usb_descriptors.h
firmware/: CMakeLists.txt  steering-wheel.c
parts/: bottom.stl  column.stl  lid.stl  parts.py  pedals.py  wheel.stl
